[gd_scene load_steps=18 format=2]

[ext_resource path="res://entities/entity_void/entity_void.gd" type="Script" id=1]
[ext_resource path="res://sprites/spr_void/spr_void2.png" type="Texture" id=2]
[ext_resource path="res://sprites/spr_void/spr_void5.png" type="Texture" id=3]
[ext_resource path="res://sprites/spr_void/spr_void6.png" type="Texture" id=4]
[ext_resource path="res://sprites/spr_void/spr_void4.png" type="Texture" id=5]
[ext_resource path="res://sprites/spr_void/spr_void1.png" type="Texture" id=6]
[ext_resource path="res://sprites/spr_void/spr_void.png" type="Texture" id=7]
[ext_resource path="res://sprites/spr_void/spr_void3.png" type="Texture" id=8]
[ext_resource path="res://sfx/Retro Explosion Short 15.wav" type="AudioStream" id=9]
[ext_resource path="res://entities/boss_attacks/node_boss_attacks.tscn" type="PackedScene" id=12]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 7 ) ],
"loop": true,
"name": "signalling",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 40.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 45.2548, 45.2548 )

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("area_void_attack/polygon_void:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("area_void_attack/col_void_attack:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("area_void_attack/polygon_void:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 0.241484, 0.153893, 0.241484 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("area_void_attack/col_void_attack:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 0.24, 0.15, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sfx_explosion:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="entity_void" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="node_boss_attacks" parent="." instance=ExtResource( 12 )]

[node name="col_void" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="spr_void" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "signalling"

[node name="area_void_get" type="Area2D" parent="."]

[node name="col_void_get" type="CollisionShape2D" parent="area_void_get"]
shape = SubResource( 3 )

[node name="area_void_attack" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="polygon_void" type="Polygon2D" parent="area_void_attack"]
scale = Vector2( 1e-05, 1e-05 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -64, 0, 0, -64, 64, 0, 0, 64 )

[node name="col_void_attack" type="CollisionShape2D" parent="area_void_attack"]
rotation = 0.785398
scale = Vector2( 1e-05, 1e-05 )
shape = SubResource( 4 )

[node name="timer_stage_one" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="timer_stage_two" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="timer_stage_three" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="sfx_explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="anim_void" type="AnimationPlayer" parent="."]
anims/damaged = SubResource( 5 )
anims/rest = SubResource( 6 )
anims/void_attack = SubResource( 7 )
[connection signal="body_entered" from="area_void_get" to="." method="_on_area_void_get_body_entered"]
[connection signal="body_entered" from="area_void_attack" to="." method="_on_area_void_attack_body_entered"]
